backend/crash.txt
file:///C:/Users/ADMIN/Downloads/Web_Len/backend/routes/users.js:5
import { authenticateToken } from '../utils/auth.js';
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../utils/auth.js' does not provide an export named 'authenticateToken'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:655:26)
    at async test (file:///C:/Users/ADMIN/Downloads/Web_Len/backend/test.js:5:5)